<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="mp_media">Media</string>
    <string name="mp_album">Album</string>
    <string name="mp_empty_media">Empty media</string>
    <string name="mp_empty_album">Empty album</string>
    <string name="mp_selected">Selected %s</string>
    <string name="mp_select">Select</string>
    <string name="mp_unselect">Unselect</string>
    <string name="mp_continue">Continue</string>
    <string name="mp_manage">Manage</string>
    <string name="mp_manage_explain">You have given access to a select number of photos and videos</string>
    <string name="mp_permission_explain">Please allow the app to access your photos and videos</string>
</resources>