<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
            android:id="@+id/mp_drag_handle"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:paddingTop="16dp"
            app:tint="?attr/colorPrimary" />

        <FrameLayout
            android:id="@+id/mp_frame_reselection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mp_drag_handle"
            android:paddingHorizontal="16dp"
            android:paddingVertical="6dp"
            android:visibility="gone"
            tools:visibility="visible">

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.Material3.CardView.Filled"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraSmall">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:gravity="center"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="8dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:maxLines="2"
                        android:text="@string/mp_manage_explain"
                        android:textAppearance="@style/TextAppearance.Material3.BodySmall" />

                    <Space
                        android:layout_width="4dp"
                        android:layout_height="0dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/mp_btn_manage"
                        style="@style/Widget.Material3.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:paddingHorizontal="16dp"
                        android:text="@string/mp_manage"
                        android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
                        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraSmall" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </com.google.android.material.card.MaterialCardView>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/mp_frame_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mp_frame_reselection">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/mp_toolbar"
                style="@style/Widget.Material3.Toolbar.OnSurface"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:navigationIcon="@drawable/mp_ic_close" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/mp_tab_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:minWidth="220dp"
                app:tabBackground="@drawable/mp_tab_background"
                app:tabIndicator="@drawable/mp_tab_indicator"
                app:tabIndicatorFullWidth="true"
                app:tabIndicatorGravity="stretch"
                app:tabRippleColor="@null"
                app:tabSelectedTextColor="?attr/colorOnSurface"
                app:tabTextColor="?attr/colorOnSurfaceVariant">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mp_media" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mp_album" />

            </com.google.android.material.tabs.TabLayout>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/mp_frame_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/mp_frame_toolbar"
            android:layout_alignParentBottom="true">

            <include
                android:id="@+id/mp_album_detail"
                layout="@layout/mp_layout_data"
                android:visibility="gone" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/mp_viewpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/mp_bottom_bar"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_gravity="bottom"
                android:background="?colorSurface"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingHorizontal="16dp"
                android:translationY="64dp"
                android:visibility="invisible">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/mp_tv_selected_items"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:drawableStart="@drawable/mp_ic_gallery"
                    android:drawablePadding="8dp"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="1"
                    android:paddingStart="4dp"
                    android:paddingEnd="8dp"
                    android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                    android:textColor="?colorOnSurface"
                    app:drawableTint="?colorOnSurface"
                    tools:text="Selected items" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/mp_btn_continue"
                    style="@style/Widget.Material3.Button.TonalButton"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:text="@string/mp_continue"
                    app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraSmall" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </FrameLayout>

        <include
            android:id="@+id/mp_media_preview"
            layout="@layout/mp_layout_media_preview"
            android:visibility="invisible" />

    </RelativeLayout>
</layout>
